--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>Vitalii Cherkashyn</title>
+		<title>Vitali</title>
 	</head>
 	<body>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vS68yhcZ0s4-rupAbo50Z5Fl_LPxJb4j4sIGYraZ2NUwVtRTVn6hUjBUeWsBiLt6Wume1O6DMZZgM7G/pub?embedded=true" frameborder="0" allowfullscreeen style="width:100%;height:100%;"></iframe>
+		<iframe src="https://docs.google.com/document" frameborder="0" allowfullscreeen style="width:100%;height:100%;"></iframe>
 	</body>
 </html>
